--- a/css/gooflow/GooFlow.css
+++ b/css/gooflow/GooFlow.css
@@ -272,7 +272,7 @@ v\:group,v\:rect,v\:imagedata,v\:oval,v\:line,v\:polyline,v\:stroke,v\:textbox {
     background-size: 18px 18px;
 }
 .GooFlow .ico_algorithm{
-    background: url(../../images/join.png) no-repeat center;
+    background: url(../../images/shell.png) no-repeat center;
     -webkit-background-size: 18px 18px;
     background-size: 18px 18px;
 }
