--- a/css/menu.css
+++ b/css/menu.css
@@ -424,7 +424,7 @@ li {
 	left: 50px;
 	top: 20px;
 }
-.m-html-mod.m-html-mod0 .mn-logobox>img {
+.m-html-mod .mn-logobox>img {
 	height: 100%;
 }
 .m-html-mod.m-html-mod0 .mn-headtxt {
