--- a/css/form.css
+++ b/css/form.css
@@ -588,12 +588,12 @@ div.tree-nav {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	padding-bottom: 30px;
+	/*padding-bottom: 30px;*/
 }
 .g-folders {
 	height: 100%;
-	overflow-y: scroll;
-	overflow-x: hidden;
+	overflow: scroll;
+	/*overflow-x: hidden;*/
 }
 .g-folders li>a {
 	display: block;
