--- a/css/BI_d3.css
+++ b/css/BI_d3.css
@@ -1,5 +1,57 @@
 
 /*BI页面*/
+/*滚动条*/
+::-webkit-scrollbar-track{
+    border-radius:4px;
+}
+::-webkit-scrollbar-track-piece{
+    -webkit-border-radius:4px;
+}
+::-webkit-scrollbar-track-piece:hover{
+
+}
+::-webkit-scrollbar{
+    width:10px;
+    height:10px;
+    border-radius:0px;
+    background-color:#F1F1F1;
+}
+::-webkit-scrollbar:hover{
+    background:#DCE1E4;
+}
+::-webkit-scrollbar-thumb{
+    background-color:#C1C8CC;
+    border:solid 1px #B5BBBF;
+    border-radius:4px;
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color:#6C7073;
+    border-color:#5F6366;
+}
+::-webkit-scrollbar-arrow {
+    color:#F00;
+    background:#0F0;
+}
+::-webkit-scrollbar-button{
+    display:block;
+    width:10px;
+    height:10px;
+    border-radius:4px;
+    border:1px solid #B5BBBF;
+    display:none;
+}
+::-webkit-scrollbar-button:hover{
+    border-color:#5F6366;
+}
+::-webkit-scrollbar-button:vertical:start:increment,
+::-webkit-scrollbar-button:vertical:end:decrement {
+    display:none;
+}
+
+
+
+
+
 
 /*图标部分样式*/
 .axis path,
@@ -198,3 +250,53 @@ table th,table td{
     stroke-width:3;
 }
 /* 仪表图 -- 结束 */
+
+/*  图例 -- 开始   */
+.legend{
+    position: absolute;
+}
+.legend.top{
+    top: 0;
+    left: 0;
+    right: 0;
+    overflow-y: auto;
+}
+.legend.left{
+    left: 0;
+    top: 0;
+    bottom: 0;
+    overflow-x: auto;
+}
+.legend.bottom{
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-y: auto;
+}
+.legend.right{
+    right: 0;
+    top: 0;
+    bottom: 0;
+    overflow-x: auto;
+}
+
+.legends{
+    margin: 0 0.8rem 0.5rem 0;
+}
+.legends.row{
+    float: left;
+}
+.legendp{
+    display:inline-block;
+    margin-right: .5rem;
+    float: left;
+}
+.SingleOmitted{
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+/*  图例 -- 结束   */
+
