--- a/css/first.css
+++ b/css/first.css
@@ -354,6 +354,10 @@
 	height: 816px;
 	margin: 84px auto 0;
 }
+#case-show,#product,#scheme{
+	width: 1204px;
+	margin: 84px auto 0;
+}
 #about h5{
 	height: 54px;
 	font-size: 14px;
@@ -411,13 +415,13 @@
 	background: #f8fafc;
 	display: none;
 }
-#about .about-list>div img{
+#about .about-list>div>img{
 	width: 1000px;
 	height: 140px;
 	border: none;
 }
 #about .about-list>div h5{
-	margin: 44px 0 28px 40px;
+	margin: 24px 0 28px 40px;
 	font-size: 28px;
 	font-weight: 700;
 }
@@ -426,16 +430,39 @@
 	font-size: 16px;
 	color: #989898;
 	margin: 0 40px;
-	text-indent: 2em;
+	/* text-indent: 2em; */
 }
 #about .about-list>div p.about-address{
 	font-size: 18px;
 	margin: 30px 40px 24px;
 }
-/* #about .about-list>div p.about-phone{
+#about .about-list>div p.about-culture{
+	font-size: 24px;
+	font-weight: 700;
+	text-align: center;
+	margin: 47px 0;
+}
+#about .about-list>div>.about-aptitude{
+	width: 230px;
+	margin: 35px 135px;
+	height: 230px;
+	float: left;
+}
+#about .about-list>div>.about-aptitude>dt{
+	width: 230px;
+	height: 170px;
+}
+#about .about-list>div>.about-aptitude>dt>img{
+	width: 100%;
+	height: 100%;
+	border: none;
+}
+#about .about-list>div>.about-aptitude>dd{
 	font-size: 16px;
-	margin: 30px 20px 47px;
-} */
+	font-weight: 700;
+	text-align: center;
+	line-height: 77px;
+}
 #about .about-list>div.on{
 	display: block;
 }
@@ -477,5 +504,84 @@
 	right: 10px;
 	top: 3px;
 	overflow: visible;
+}
+/* 产品页 */
+.product-head{
+	height: 350px;
+	width: 100%;
+	background: url(../../images/product-bg.jpg) no-repeat;
+	background-size: 100% 100%;
+	margin-top: 84px;
+}
+.product-list{
+	height: 230px;
+	width: 100%;
+	margin: 20px 0 10px;
+	background: #fff;
+	overflow: hidden;
+}
+.product-list dt{
+	width: 230px;
+	height: 170px;
+	float: left;
+	margin: 30px 30px 30px 20px;
+}
+.product-list dt img{
+	width: 100%;
+	height: 100%;
+	border: none;
+}
+.product-list dd{
+	float: left;
+	margin: 30px 0;
+	width: 880px;
+}
+.product-list dd p{
+	font-size: 18px;
+	font-weight: 700;
+	line-height: 28px;
+	margin-bottom: 20px;
+}
+.product-list dd span{
+	line-height: 40px;
+    font-size: 16px;
+    color: #989898;
+}
+/* 方案页 */
+.scheme-head{
+	height: 350px;
+	width: 100%;
+	margin-top: 84px;
+	background: url(../../images/scheme-bg.jpg) no-repeat;
+	background-size: 100% 110%;
+}
+/* 案例页 */
+.case-show-head{
+	height: 350px;
+	width: 100%;
+	margin-top: 82px;
+	background: url(../../images/caseShow-bg.jpg) no-repeat;
+	background-size: 100% 112%;
+}
+.case-show-list{
+	width: 600px;
+	height: 300px;
+	float: left;
+}
+.case-show-list dt{
+	width: 400px;
+	height: 200px;
+	margin: 0 100px;
+}
+.case-show-list dt img{
+	width: 100%;
+	height: 100%;
+	border: none;
+}
+.case-show-list dd{
+	line-height: 40px;
+	text-align: center;
+	font-size: 18px;
+	font-weight: 700;
 }
 
