--- a/css/menu.css
+++ b/css/menu.css
@@ -438,9 +438,9 @@ li {
 }
 .m-html-mod.m-html-mod0 .mn-logobox {
 	width: 120px;
-	height: 52px;
-	left: 50px;
-	top: 10px;
+	height: 80px;
+	left: 30px;
+	top: 0;
 }
 .m-html-mod .mn-logobox>img {
 	height: 100%;
@@ -468,9 +468,9 @@ li {
 }
 .m-html-mod.m-html-mod1 .mn-logobox {
 	width: 120px;
-	height: 52px;
-	right: 120px;
-	top: 10px;
+	height: 80px;
+	right: 40px;
+	top: 0;
 }
 .m-html-mod.m-html-mod1 .mn-headtxt {
 	left: 30px;
@@ -497,9 +497,9 @@ li {
 }
 .m-html-mod.m-html-mod2 .mn-logobox {
 	width: 120px;
-	height: 52px;
+	height: 80px;
 	left: 50px;
-	top: 10px;
+	top: 0;
 }
 .m-html-mod.m-html-mod2 .mn-headtxt {
 	right: 100px;
