--- a/css/first.css
+++ b/css/first.css
@@ -111,6 +111,8 @@
 		background-image: url("../images/index/halo_2.png");
 		position: relative;
 		margin: 5% auto 0;
+		/*transform: rotate3d(0, 1, 0 , 30deg) translate3d(0, 0, -150px);*/
+		transform-style: preserve-3d;
 	}
 		.dynamic .dny_1 .dny_1_outermost:after{
 			content: '';
@@ -427,14 +429,51 @@
 	position: relative;
 	padding-top: 20%;
 }
-.wave{
-	/*position: absolute;*/
+.graphics{
+	width: 1165px;
+	height: 343px;
 }
+.wave{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 1165px;
+	height: 343px;
+}
+.wave.active{
+	animation: wave 5s ease-in 1;
+}
+	/*	页面显示动画  */
+	@-webkit-keyframes wave{
+		0%{  height: 0;  }
+		50%{  height: 171.5px;  }
+		100%{  height: 343px;  }
+	}
+
+
 .trajectory{
+	width: 930px;
+	height: 240px;
+	background: url("../images/index/trajectory.png") no-repeat;
 	position: absolute;
 	top: 10%;
 	left: 11%;
 }
+.trajectory.active{
+	animation: trajectory 5s ease-in-out 1;
+}
+	/*	页面显示动画  */
+	@-webkit-keyframes trajectory{
+		0%{  width: 0;  }
+		20%{  width: 170px;  }
+		40%{  width: 299px;  }
+		60%{  width: 499px;  }
+		80%{  width: 695px;  }
+		100%{  width: 930px;  }
+	}
+
+
+
 /*section3*/
 .chart-background{
 	width: 1182px;
@@ -596,7 +635,7 @@
 }
 #case-show,#product,#scheme{
 	width: 1204px;
-	margin: 84px auto 0;
+	margin: 20px auto 0;
 }
 #about h5{
 	height: 54px;
@@ -747,13 +786,13 @@
 }
 /* 产品页 */
 .product-head{
-	height: 350px;
+	height: 200px;
 	width: 100%;
 	background: url(../../images/product-bg.jpg) no-repeat;
 	background-size: 100% 115%;
 	margin-top: 84px;
 	color: #fff;
-    line-height: 350px;
+    line-height: 200px;
     text-align: center;
     font-size: 40px;
 }
@@ -763,6 +802,9 @@
 	margin: 20px 0 10px;
 	background: #fff;
 	overflow: hidden;
+}
+.product-list:first-child{
+	margin: 0 0 10px;
 }
 .product-list dt{
 	width: 230px;
@@ -793,25 +835,25 @@
 }
 /* 方案页 */
 .scheme-head{
-	height: 350px;
+	height: 200px;
 	width: 100%;
 	margin-top: 84px;
 	background: url(../../images/scheme-bg.jpg) no-repeat;
 	background-size: 100% 110%;
 	color: #fff;
-    line-height: 350px;
+    line-height: 200px;
     text-align: center;
     font-size: 40px;
 }
 /* 案例页 */
 .case-show-head{
-	height: 350px;
+	height: 200px;
 	width: 100%;
 	margin-top: 82px;
 	background: url(../../images/caseShow-bg.jpg) no-repeat;
 	background-size: 100% 112%;
 	color: #fff;
-    line-height: 350px;
+    line-height: 200px;
     text-align: center;
     font-size: 40px;
 }
