--- a/css/first.css
+++ b/css/first.css
@@ -111,9 +111,30 @@
 		background-image: url("../images/index/halo_2.png");
 		position: relative;
 		margin: 5% auto 0;
-		/*transform: rotate3d(0, 1, 0 , 30deg) translate3d(0, 0, -150px);*/
-		transform-style: preserve-3d;
+		/*transform: rotate3d(3, 0, 3 , 0deg);*/
+		/*transform: rotate(190deg);*/
+		/*transform-style: preserve-3d;*/
+		/*transform-origin:center center;*/
+		/*animation: outermost 10s ease-out infinite;*/
 	}
+		/*	星环动画  */
+		/*@-webkit-keyframes outermost{*/
+			/*!*0%{*!*/
+				/*!*transform: rotate3d(3, 0, 3 , 0deg);*!*/
+			/*!*}*!*/
+			/*!*50%{*!*/
+				/*!*transform: rotate3d(3, 0, 3 , 180deg);*!*/
+			/*!*}*!*/
+			/*!*100%{*!*/
+				/*!*transform: rotate3d(3, 0, 3 , 360deg);*!*/
+			/*!*}*!*/
+		/*}*/
+		/*@-moz-keyframes outermost{*/
+
+		/*}*/
+		/*@-o-keyframes outermost{*/
+
+		/*}*/
 		.dynamic .dny_1 .dny_1_outermost:after{
 			content: '';
 			width: 124px;
@@ -127,20 +148,20 @@
 		}
 		/*	大脑上下动画  */
 		@-webkit-keyframes brain{
-			0%{
-				top: 50%;
-			}
-			50%{
-				top: 40%;
-			}
-			100%{
-				top: 50%;
-			}
+			0%{  top: 50%;  }
+			50%{  top: 40%;  }
+			100%{  top: 50%;  }
 		}
-
-
-
-
+		@-moz-keyframes brain{
+			0%{  top: 50%;  }
+			50%{  top: 40%;  }
+			100%{  top: 50%;  }
+		}
+		@-o-keyframes brain{
+			0%{  top: 50%;  }
+			50%{  top: 40%;  }
+			100%{  top: 50%;  }
+		}
 	.dynamic .dny_1 .dny_1_outermost .dny_1_outermost_middle{
 		width: 280px;
 		height: 152px;
@@ -162,7 +183,6 @@
 		}
 
 
-
 	.dynamic .dny_2 .dny_2_back{
 		width: 1174px;
 		height: 352px;
@@ -171,7 +191,28 @@
 	}
 	.dynamic .dny_2 .dny_2_all{
 		position: absolute;
+		margin-top: 20px;
+		animation: dny_2_all 3s ease-out infinite;
 	}
+
+	/*	火箭动画  */
+	@-webkit-keyframes dny_2_all{
+		0%{  margin-top: 20px;  }
+		50%{  margin-top: 0;  }
+		100%{  margin-top: 20px;  }
+	}
+	@-moz-keyframes dny_2_all{
+		0%{  margin-top: 20px;  }
+		50%{  margin-top: 0;  }
+		100%{  margin-top: 20px;  }
+	}
+	@-o-keyframes dny_2_all{
+		0%{  margin-top: 20px;  }
+		50%{  margin-top: 0;  }
+		100%{  margin-top: 20px;  }
+	}
+
+
 	.dynamic .dny_2 .dny_2_big{
 		width: 49px;
 		height: 44px;
@@ -372,6 +413,7 @@
     -ms-box-shadow: 0 2px 30px 4px rgba(14,5,10,.15);
     -o-box-shadow: 0 2px 30px 4px rgba(14,5,10,.15);
     box-shadow: 0 2px 30px 4px rgba(14,5,10,.15);
+	-moz-border-radius:5px;
 	border-radius: 5px;
 	overflow: hidden;
 	background-color: rgba(1,137,202,.68);
@@ -449,6 +491,16 @@
 		50%{  height: 171.5px;  }
 		100%{  height: 343px;  }
 	}
+	@-moz-keyframes wave{
+		0%{  height: 0;  }
+		50%{  height: 171.5px;  }
+		100%{  height: 343px;  }
+	}
+	@-o-keyframes wave{
+		0%{  height: 0;  }
+		50%{  height: 171.5px;  }
+		100%{  height: 343px;  }
+	}
 
 
 .trajectory{
@@ -464,6 +516,22 @@
 }
 	/*	页面显示动画  */
 	@-webkit-keyframes trajectory{
+		0%{  width: 0;  }
+		20%{  width: 170px;  }
+		40%{  width: 299px;  }
+		60%{  width: 499px;  }
+		80%{  width: 695px;  }
+		100%{  width: 930px;  }
+	}
+	@-moz-keyframes trajectory{
+		0%{  width: 0;  }
+		20%{  width: 170px;  }
+		40%{  width: 299px;  }
+		60%{  width: 499px;  }
+		80%{  width: 695px;  }
+		100%{  width: 930px;  }
+	}
+	@-o-keyframes trajectory{
 		0%{  width: 0;  }
 		20%{  width: 170px;  }
 		40%{  width: 299px;  }
@@ -557,6 +625,7 @@
 	width: 180px;
 	height: 60px;
 	line-height: 60px;
+	-moz-border-radius:60px;
 	border-radius: 60px;
 	background-color: #0189ca;
 	text-align: center;
@@ -569,7 +638,7 @@
 	height: 50px;
 	width: 722px;
 	top: 16px;
-	transform: translateX(-50%);
+	margin-left: -361px;
 }
 .head-bar>.main-parent>li {
 	float: left;
@@ -767,6 +836,7 @@
 	background: #fff;
 	overflow: hidden;
 	z-index: 2;
+	-moz-border-radius:2px;
 	border-radius: 2px;
 	-webkit-transform-origin: center bottom;
 	transform-origin: center bottom;
